--- a/style/style.css
+++ b/style/style.css
@@ -253,9 +253,10 @@ input[type="radio"]:checked + .pseudo-radiobutton {
 
 .result {
   margin-inline: auto;
-  border: 1px solid #a5a5a5;
+  border: 1px solid #0d6efd;
   padding: 10px;
   overflow-y: hidden;
+  color: #0d6efd;
   max-inline-size: 50%;
   min-inline-size: 205px;
   min-block-size: 80px;
@@ -264,7 +265,9 @@ input[type="radio"]:checked + .pseudo-radiobutton {
 .result-subtitle {
   margin-inline: auto;
   padding-block: 10px;
+  color: #0d6efd;
   font-size: clamp(1rem, 0.172vw + 0.966rem, 1.125rem);
+  text-align: center;
   max-inline-size: 50%;
   min-inline-size: 205px;
 }
@@ -288,4 +291,11 @@ input[type="radio"]:checked + .pseudo-radiobutton {
   color: orange;
   font-size: 16px;
   text-align: center;
+}
+
+@media (width <= 580px) {
+  .submit-button {
+    display: block;
+    margin-inline: auto;
+  }
 }
