--- a/style/style.css
+++ b/style/style.css
@@ -81,10 +81,10 @@
   padding: 0.375rem 0.75rem;
   color: #212529;
   text-align: center;
+  word-wrap: break-word;
   background-color: #e9ecef;
   cursor: pointer;
   inline-size: 70%;
-  word-wrap: break-word;
 }
 
 .file-input {
@@ -299,6 +299,78 @@ input[type="radio"]:checked + .pseudo-radiobutton {
 
 .tools-tab:not(.tools-tab-show) {
   display: none;
+}
+
+.slider-container {
+  margin: 30px auto;
+  inline-size: 100%;
+}
+
+.before-after-slider {
+  position: relative;
+  display: none;
+  overflow: hidden;
+  inline-size: 100%;
+  max-block-size: 1000px;
+}
+
+.before-img {
+  position: absolute;
+  z-index: 2;
+  overflow: hidden;
+  block-size: 100%;
+  inline-size: 50%;
+  inset-block-start: 0;
+  inset-inline-start: 0;
+}
+
+.slider-img {
+  display: block;
+  -moz-user-select: none;
+  -o-user-select: none;
+  -khtml-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  inline-size: 100%;
+  aspect-ratio: 1 / 1;
+}
+
+.resizer {
+  position: absolute;
+  z-index: 5;
+  display: flex;
+  align-items: center;
+  background-color: #fff;
+  -ms-touch-action: pan-y;
+  touch-action: pan-y;
+  inset-block-start: 0;
+  inset-inline-start: 50%;
+  block-size: 100%;
+  inline-size: 4px;
+}
+
+.resizer::after {
+  content: "⬄";
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 3px solid #fff;
+  border-radius: 50%;
+  color: #fff;
+  font-weight: 700;
+  font-size: 36px;
+  background-color: #000;
+  cursor: pointer;
+  inline-size: 40px;
+  block-size: 40px;
+  inset-inline-start: -18px;
+  inset-block-start: 50%;
+}
+
+.is-shown {
+  display: block;
 }
 
 .footer {
