--- a/style/style.css
+++ b/style/style.css
@@ -385,6 +385,10 @@ input[type="radio"]:checked + .pseudo-radiobutton {
   text-align: center;
 }
 
+.lorem__result {
+  white-space: pre-line;
+}
+
 @media (width <= 580px) {
   .submit-button {
     display: block;
